--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </head>
 <body>
   <div id="mode">
+    <div class="loader">
+      <img src="images/loading.gif" alt="">
+    </div>
     <div class="navbar navbar-expand-lg headroom">
       <div class="container">
         <a href="#" class="navbar-brand">Mahmoud</a>
