--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </div>
     <div class="footer">
       <div class="container">
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between flex-wrap">
           <p class="m-0">Made With <i class="fas fa-heart"></i> By Mahmoud Ahmed &copy; 2023</p>
           <div class="icons">
             <a href="https://www.facebook.com/mahmoud.farghly.353" target="_blank" class="me-2 facebook"><i class="fab fa-facebook-f"></i></a>
