--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
                   </div>
                 </div>
               </div>
-              <button id="submit" class="button mt-5">
+              <button id="submit" class="button me-3 mt-5">
                 <span>Send</span>
                 <i class="fas fa-arrow-right"></i>
               </button>
-              <span class="ms-3 successMessage text-success user-select-none"></span>
-              <span class="ms-3 errorMessage text-danger user-select-none"></span>
+              <span class="successMessage text-success user-select-none"></span>
+              <span class="errorMessage text-danger user-select-none"></span>
             </form>
           </div>
           <div class="col-lg-4">
