--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div id="mode">
     <div class="loader">
-      <img src="images/loading.gif" alt="">
+      <img src="images/loading.svg" alt="">
     </div>
     <div class="navbar navbar-expand-lg headroom">
       <div class="container">
