Added new project

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                 </div>
               </div>
               <div class="text">
-                <p class="mt-2">This is a Simple ToDo APP Made With React JS That Allows You To Add/Remove Todos And You Can See The Todo Creation Date.</p>
-                <a href="https://modapro1.github.io/todoApp/" target="_blank" class="card-btn d-block">Visit Site</a>
+                <p class="mt-2">This is a Coach Finder App Made With Vue JS, Vuex, Vue-router, The Website Have Some Cool Features You Can Check it out.</p>
+                <a href="https://coachapp-41b17.web.app/" target="_blank" class="card-btn d-block">Visit Site</a>
               </div>
             </div>
           </div>
